feat/get offer by ID
